xử lý luồng thanh toán và cập nhật số liệu quản lý đơn hàng

--- a/src/main/resources/templates/fragment/fragments.html
+++ b/src/main/resources/templates/fragment/fragments.html
@@ -22,7 +22,9 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal" id="closeModalBtn">Close</button>
+        <a th:href="@{/cart}">
+          <button class="btn btn-secondary confirm-btn">Quay lại</button>
+        </a>
       </div>
 
     </div>
