--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" th:href="@{/shop/css/bootstrap.min.css}" />
     <!-- Main CSS File -->
     <link rel="stylesheet" th:href="@{/shop/css/style.min.css}" />
+    <link rel="stylesheet" th:href="@{/shop/css/checkout.min.css}" />
     <link
       rel="stylesheet"
       type="text/css"
