--- a/src/main/resources/templates/shop/order_history.html
+++ b/src/main/resources/templates/shop/order_history.html
@@ -77,7 +77,12 @@
                                     <div class="product-info-wrapper">
                                         <div class="thumbnails"><img class="img-fluid" th:src="@{${item.productImg}}" th:alt="${item.productName}"/></div>
                                         <div class="product-info"><span class="name" th:text="${item.productName}"></span>
-                                            <div class="size"><span th:text="${item.sizeUs}"></span>US | <span th:text="${item.sizeVn}"></span>VN | <span th:text="${item.sizeCm}"></span>CM</div>
+                                            <div class="size">
+                                                <span th:text="${item.sizeUs}"></span>US |
+                                                <span th:text="${item.sizeVn}"></span>VN |
+                                                <span th:text="${item.sizeCm}"></span>CM |
+                                                <span th:text="${item.quantity}"></span>đôi
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="price bid-price"><span class="text-price" th:text="${item.totalPrice}"></span> &#x20AB;</div>
